--- a/automations.yaml
+++ b/automations.yaml
@@ -2465,15 +2465,15 @@
       min_azimuth: 225
       is_enabled_input: input_boolean.autorollo_arbeitszimmer_west
       time_down: '20:00:00'
-      min_elevation: 28
+      min_elevation: 24
       position_closed: 10
       position_ventilation: 10
       position_ventilation_night_time: 10
       max_elevation: 90
       shading_forecast_sensor: weather.forecast_home
       default_brightness_sensor: sensor.hmip_slo_000d5d89b9f5a7_durchschnittliche_beleuchtungsstarke
-      brightness_up: 1500
-      brightness_down: 500
+      brightness_up: 1650
+      brightness_down: 1100
       shading_sun_brightness_end: 12000
       auto_options:
       - auto_up_enabled
@@ -2876,17 +2876,26 @@
   - trigger: state
     entity_id:
     - binary_sensor.keller_prasenzmelder_presence
+    - binary_sensor.prasenz
   - trigger: state
     entity_id:
     - binary_sensor.keller_prasenzmelder_motion
+    - binary_sensor.bewegung
   conditions: []
   actions:
   - if:
-    - type: is_occupied
-      condition: device
-      device_id: 0ad634fa06b48c10065c324ac031e5ca
-      entity_id: 62c981fe76ca27e95efa39edbd2c4326
-      domain: binary_sensor
+    - condition: or
+      conditions:
+      - type: is_occupied
+        condition: device
+        device_id: d1978eb326eeebda5586c6ed35009936
+        entity_id: adfe267b57169c908575a9bb1abf17cb
+        domain: binary_sensor
+      - type: is_occupied
+        condition: device
+        device_id: 0ad634fa06b48c10065c324ac031e5ca
+        entity_id: 62c981fe76ca27e95efa39edbd2c4326
+        domain: binary_sensor
     then:
     - type: turn_on
       device_id: 004ba20253da75895390a52691562653
