--- a/blueprints/automation/shutter_automation.yaml
+++ b/blueprints/automation/shutter_automation.yaml
@@ -940,6 +940,7 @@ actions:
           - value_template: "{{ is_shading_enabled }}"
             condition: template
             alias: "Auto-shading is enabled"
+          - "{{ now() >= today_at(time_up_late_today) }}"
           - alias: "Are shading conditions lifted"
             or:
             - "{{ trigger.id | regex_match('^(t_shading_end_pending)') }}"
